log/build_2024-11-21_11-31-43/mypkg/stderr.log
  File "/home/aoki/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 9
    def cb(msg):
    ^
SyntaxError: invalid syntax

  File "/home/aoki/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 5
    rclpy.init()
                 ^
SyntaxError: invalid character in identifier

